# deepsoz-hem

./: Dockerfile  README.md
code/: baselines.py  create_manifest.py  dataloader.py  eval.ipynb  eval.py  eval.sh  manifest.csv  newptlist.npy  pipeline.py  postprocessing.py  ptlist.npy  requirements.txt  retrain.py  run.sh  run_train.py  subjects_with_files.npy  trainloop.py  utils.py
deepsoz-hem/: pyproject.toml
deepsoz-hem/src/deepsoz/: __init__.py  baselines.py  main.py  requirements.txt
