[project]
name = "DeepSOZ-HNM"
version = "0.1.0"
description = "SZCore reproduction of DeepSOZ with Hard Negative-Mining, 'Shama DM, Jing J, Venkataraman A. DeepSOZ: A Robust Deep Model for Joint Temporal and Spatial Seizure Onset Localization from Multichannel EEG Data.', Med Image Comput Comput Assist Interv. 2023 Oct; 2023 "
authors = [
    { name = "Amruth Niranjan"},
    { name = "Deeksha M Shama"},
    { name = "Archana Venkataraman", email = "archanav@bu.edu" }
]

dependencies = [
    "absl-py>=2.1.0",
    "aiohappyeyeballs>=2.4.3",
    "aiohttp>=3.11.3",
    "aiosignal>=1.3.1",
    "asttokens>=2.4.1",
    "attrs>=24.2.0",
    "certifi>=2024.2.2",
    "cftime>=1.6.4.post1",
    "charset-normalizer>=3.3.2",
    "comm>=0.2.2",
    "contourpy>=1.2.1",
    "cycler>=0.12.1",
    "dataloaders>=0.0.1",
    "debugpy>=1.8.1",
    "decorator>=4.4.2",
    "dgl>=2.1.0",
    "dotted-dict>=1.1.3",
    "epilepsy2bids>=0.0.7",
    "executing>=2.0.1",
    "filelock>=3.13.1",
    "fonttools>=4.51.0",
    "frozenlist>=1.5.0",
    "fsspec>=2024.2.0",
    "glob2>=0.7",
    "grpcio>=1.68.1",
    "idna>=3.6",
    "imageio>=2.34.2",
    "imageio-ffmpeg>=0.5.1",
    "ipykernel>=6.29.4",
    "ipython>=8.22.2",
    "jedi>=0.19.1",
    "Jinja2>=3.1.3",
    "joblib>=1.3.2",
    "jupyter_client>=8.6.1",
    "jupyter_core>=5.7.2",
    "kiwisolver>=1.4.5",
    "lazy_loader>=0.4",
    "llvmlite>=0.44.0",
    "Markdown>=3.7",
    "MarkupSafe>=2.1.5",
    "matplotlib>=3.8.4",
    "matplotlib-inline>=0.1.6",
    "mne>=1.8.0",
    "mne-connectivity>=0.7.0",
    "mpmath>=1.3.0",
    "multidict>=6.1.0",
    "nest-asyncio>=1.6.0",
    "netCDF4>=1.7.2",
    "networkx>=3.2.1",
    "numba>=0.61.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "parso>=0.8.3",
    "pexpect>=4.9.0",
    "pillow>=10.3.0",
    "platformdirs>=4.2.0",
    "pooch>=1.8.1",
    "proglog>=0.1.10",
    "prompt-toolkit>=3.0.43",
    "propcache>=0.2.0",
    "protobuf>=5.29.2",
    "psutil>=5.9.8",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.2",
    "pyarrow>=19.0.0",
    "pyEDFlib>=0.1.36",
    "Pygments>=2.17.2",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.1",
    "PyYAML>=6.0.2",
    "pyzmq>=25.1.2",
    "requests>=2.31.0",
    "resampy>=0.4.3",
    "scikit-learn>=1.4.1.post1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "six>=1.16.0",
    "stack-data>=0.6.3",
    "sympy>=1.13.1",
    "szcore-evaluation>=0.0.5",
    "tensorboard>=2.18.0",
    "tensorboard-data-server>=0.7.2",
    "termcolor>=2.5.0",
    "threadpoolctl>=3.4.0",
    "timescoring>=0.0.6",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.5.1",
    "torchdata>=0.9.0",
    "tornado>=6.4",
    "tqdm>=4.66.2",
    "traitlets>=5.14.2",
    "triton>=3.1.0",
    "typing_extensions>=4.10.0",
    "tzdata>=2024.1",
    "urllib3>=2.2.1",
    "wcwidth>=0.2.13",
    "Werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "xarray>=2024.10.0",
    "yarl>=1.17.2",
    "zipfile36>=0.1.3"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deepsoz"]